# HIPRTSDK

./: .clang-format  .gitignore  .gitmodules  LICENSE  README.md  conanfile.txt
.github/workflows/: format.yaml
doc/: 01_geom_intersection.md  02_scene_intersection.md  03_custom_intersection.md  07_custom_bvh_import.md  08_ambient_occlusion.md  11_multi_custom_intersection.md  18_shadow_ray.md  19_primary_ray.md
hiprt/: README.md  hiprt.h  hiprt_device.h  hiprt_vec.h
hiprt/win/: hiprt64.lib
orochi_recipe/: CMakeLists.txt  conandata.yml  conanfile.py
orochi_recipe/test_package/: CMakeLists.txt  conanfile.py  test_package.cpp
tutorials/: premake5.lua  readme.md
tutorials/00_context_creation/: main.cpp  premake5.lua
tutorials/01_geom_intersection/: TestKernel.h  main.cpp  premake5.lua
tutorials/02_scene_intersection/: TestKernel.h  main.cpp  premake5.lua
tutorials/03_custom_intersection/: TestKernel.h  main.cpp  premake5.lua
tutorials/04_compaction/: main.cpp  premake5.lua
tutorials/04_global_stack/: TestKernel.h  main.cpp  premake5.lua
tutorials/04_shared_stack/: TestKernel.h  main.cpp  premake5.lua
tutorials/05_custom_bvh_import/: TestKernel.h  main.cpp  premake5.lua
tutorials/05_dynamic_stack/: main.cpp  premake5.lua
tutorials/05_global_stack/: main.cpp  premake5.lua
tutorials/06_ambient_occlusion/: main.cpp  premake5.lua
tutorials/06_custom_bvh_import/: main.cpp  premake5.lua
tutorials/06_dynamic_stack/: main.cpp  premake5.lua
tutorials/06_obj_AO/: TestKernel.h  main.cpp  premake5.lua
tutorials/07_ambient_occlusion/: main.cpp  (+1 more)
(+89 files in other folders)
